--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,368 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-
+<androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_white"
+    android:id="@+id/drawer_layout"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start"
     tools:context=".MainActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
+        <androidx.appcompat.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:id="@+id/toolbar"
+            android:elevation="4dp"
+            android:background="@color/colorAccent"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            />
 
-<!--    <TextView-->
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/fragment_container"/>
+
+    </LinearLayout>
+
+<!--    <com.google.android.material.navigation.NavigationView-->
 <!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginBottom="10dp"-->
-<!--        android:layout_marginLeft="150dp"-->
-<!--        android:textSize="20dp"-->
-<!--        android:textStyle="bold"-->
-<!--        android:text="Faturamento "/>-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:id="@+id/nav_view"-->
+<!--        android:layout_gravity="start"-->
+<!--        app:headerLayout="@layout/nav_header"-->
+<!--        app:menu="@menu/nav_menu"-->
+<!--        app:itemIconTint="@color/colorAccent"-->
+<!--        app:itemTextColor="@color/colorAccent"/>-->
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingTop="50dp"
+        android:id="@+id/lnTeste"
+        android:orientation="vertical">
+    </LinearLayout>
 
 
 
-<!--    &lt;!&ndash; Card view for displaying the &ndash;&gt;-->
-<!--    &lt;!&ndash; Pie chart and details of pie chart &ndash;&gt;-->
-<!--    <androidx.cardview.widget.CardView-->
-<!--        android:id="@+id/cardViewGraph"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="200dp"-->
-<!--        android:layout_marginLeft="20dp"-->
-<!--        android:layout_marginRight="20dp"-->
-<!--        android:layout_marginTop="35dp"-->
-<!--        android:elevation="10dp"-->
-<!--        app:cardCornerRadius="10dp">-->
+    <com.google.android.material.navigation.NavigationView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/nav_view"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/nav_menu"
+        app:itemIconTint="@color/colorAccent"
+        app:itemTextColor="@color/colorAccent"/>
 
-
-<!--        &lt;!&ndash;Linear layout to display pie chart &ndash;&gt;-->
-<!--        &lt;!&ndash; and details of pie chart&ndash;&gt;-->
-
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:orientation="horizontal"-->
-<!--            android:weightSum="2">-->
-
-<!--            &lt;!&ndash;Pie chart to display the data&ndash;&gt;-->
-
-<!--            <org.eazegraph.lib.charts.PieChart-->
-<!--                xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--                android:id="@+id/piechart"-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:padding="6dp"-->
-<!--                android:layout_weight="1"-->
-<!--                android:layout_marginTop="15dp"-->
-<!--                android:layout_marginLeft="15dp"-->
-<!--                android:layout_marginBottom="15dp"-->
-
-<!--                />-->
-
-<!--            &lt;!&ndash;Creating another linear layout &ndash;&gt;-->
-<!--            &lt;!&ndash; to display pie chart details &ndash;&gt;-->
-<!--            <LinearLayout-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:layout_weight="1"-->
-<!--                android:layout_marginLeft="20dp"-->
-<!--                android:orientation="vertical"-->
-<!--                android:gravity="center_vertical"-->
-<!--                >-->
-
-<!--                <LinearLayout-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="15dp"-->
-<!--                    android:layout_gravity="center_vertical">-->
-
-<!--                    &lt;!&ndash;View to display the yellow color icon&ndash;&gt;-->
-<!--                    <View-->
-<!--                        android:layout_width="15dp"-->
-<!--                        android:layout_height="match_parent"-->
-<!--                        android:background="@color/Combustivel"/>-->
-
-<!--                    &lt;!&ndash;Text view to display R &ndash;&gt;-->
-<!--                    <TextView-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:text="Combustivel"-->
-<!--                        android:paddingLeft="10dp"/>-->
-
-<!--                </LinearLayout>-->
-
-<!--                &lt;!&ndash;Linear layout to display Python&ndash;&gt;-->
-<!--                <LinearLayout-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="15dp"-->
-<!--                    android:layout_gravity="center_vertical"-->
-<!--                    android:layout_marginTop="5dp">-->
-
-<!--                    &lt;!&ndash;View to display the green color icon&ndash;&gt;-->
-<!--                    <View-->
-<!--                        android:layout_width="15dp"-->
-<!--                        android:layout_height="match_parent"-->
-<!--                        android:background="@color/LucroFinal"/>-->
-
-<!--                    &lt;!&ndash;Text view to display python text &ndash;&gt;-->
-<!--                    <TextView-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:text="LucroFinal"-->
-<!--                        android:paddingLeft="10dp"/>-->
-
-<!--                </LinearLayout>-->
-
-<!--                &lt;!&ndash;Linear layout to display C++&ndash;&gt;-->
-<!--                <LinearLayout-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="15dp"-->
-<!--                    android:layout_gravity="center_vertical"-->
-<!--                    android:layout_marginTop="5dp">-->
-
-<!--                    &lt;!&ndash;View to display the red color icon&ndash;&gt;-->
-<!--                    <View-->
-<!--                        android:layout_width="15dp"-->
-<!--                        android:layout_height="match_parent"-->
-<!--                        android:background="@color/Pneus"/>-->
-
-<!--                    &lt;!&ndash;Text view to display C++ text &ndash;&gt;-->
-<!--                    <TextView-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:text="Pneus"-->
-<!--                        android:paddingLeft="10dp"/>-->
-
-<!--                </LinearLayout>-->
-
-<!--                &lt;!&ndash;Linear layout to display Java&ndash;&gt;-->
-<!--                <LinearLayout-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="15dp"-->
-<!--                    android:layout_gravity="center_vertical"-->
-<!--                    android:layout_marginTop="5dp">-->
-
-<!--                    &lt;!&ndash;View to display the blue color icon&ndash;&gt;-->
-<!--                    <View-->
-<!--                        android:layout_width="15dp"-->
-<!--                        android:layout_height="match_parent"-->
-<!--                        android:background="@color/ServicoEletrico"/>-->
-
-<!--                    &lt;!&ndash;Text view to display Java text &ndash;&gt;-->
-<!--                    <TextView-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:text="Serviço Elétrico"-->
-<!--                        android:paddingLeft="10dp"/>-->
-
-<!--                </LinearLayout>-->
-
-<!--            </LinearLayout>-->
-
-<!--        </LinearLayout>-->
-
-<!--    </androidx.cardview.widget.CardView>-->
-
-
-<!--    &lt;!&ndash; Another Card view for displaying &ndash;&gt;-->
-<!--    &lt;!&ndash; Use of programming languages &ndash;&gt;-->
-<!--    <androidx.cardview.widget.CardView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="260dp"-->
-<!--        android:layout_below="@+id/cardViewGraph"-->
-<!--        android:layout_marginLeft="20dp"-->
-<!--        android:layout_marginRight="20dp"-->
-<!--        android:layout_marginTop="20dp"-->
-<!--        android:layout_marginBottom="20dp"-->
-<!--        android:elevation="10dp"-->
-<!--        app:cardCornerRadius="10dp"-->
-<!--        android:id="@+id/details">-->
-
-<!--        &lt;!&ndash;Relative layout to display &ndash;&gt;-->
-<!--        &lt;!&ndash; use of programming languages &ndash;&gt;-->
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="vertical">-->
-
-<!--            &lt;!&ndash;Text view to use of &ndash;&gt;-->
-<!--            &lt;!&ndash; programming languages text&ndash;&gt;-->
-<!--            <TextView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="Porcentagem do Crédito Total"-->
-<!--                android:textSize="23sp"-->
-<!--                android:textStyle="bold"-->
-<!--                android:layout_marginLeft="25dp"-->
-<!--                android:layout_marginTop="20dp"/>-->
-
-<!--            &lt;!&ndash;View to display the line&ndash;&gt;-->
-<!--            <View-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="1dp"-->
-<!--                android:background="@color/color_two"-->
-<!--                android:layout_marginLeft="20dp"-->
-<!--                android:layout_marginRight="20dp"-->
-<!--                android:layout_marginTop="5dp"/>-->
-
-<!--            <RelativeLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginRight="25dp"-->
-<!--                android:layout_marginLeft="25dp"-->
-<!--                android:layout_marginTop="10dp"-->
-<!--                android:layout_marginBottom="10dp">-->
-
-<!--                &lt;!&ndash;Text view to display R &ndash;&gt;-->
-<!--                <TextView-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:fontFamily="sans-serif-light"-->
-<!--                    android:text="Combustivel"-->
-<!--                    android:textSize="18sp"/>-->
-
-<!--                &lt;!&ndash;Text view to display the &ndash;&gt;-->
-<!--                &lt;!&ndash; percentage of programming language &ndash;&gt;-->
-<!--                &lt;!&ndash; used. For now default set to 0&ndash;&gt;-->
-<!--                <TextView-->
-<!--                    android:layout_width="fill_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:text="0"-->
-<!--                    android:id="@+id/tvCombustivel"-->
-<!--                    android:textAlignment="textEnd"-->
-<!--                    android:textSize="18sp"-->
-<!--                    android:textColor="@color/color_one"-->
-<!--                    android:textStyle="bold"-->
-<!--                    android:fontFamily="sans-serif-light"-->
-<!--                    android:layout_alignParentRight="true"/>-->
-<!--            </RelativeLayout>-->
-
-<!--            &lt;!&ndash;View to display the line&ndash;&gt;-->
-<!--            <View-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="1dp"-->
-<!--                android:background="@color/color_two"-->
-<!--                android:layout_marginLeft="20dp"-->
-<!--                android:layout_marginRight="20dp" />-->
-
-<!--            <RelativeLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginRight="25dp"-->
-<!--                android:layout_marginLeft="25dp"-->
-<!--                android:layout_marginTop="10dp"-->
-<!--                android:layout_marginBottom="10dp">-->
-
-<!--                <TextView-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:fontFamily="sans-serif-light"-->
-<!--                    android:text="Lucro Final"-->
-<!--                    android:textSize="18sp"/>-->
-
-<!--                &lt;!&ndash;Text view to display the percentage &ndash;&gt;-->
-<!--                &lt;!&ndash; of programming language used. &ndash;&gt;-->
-<!--                &lt;!&ndash; For now default set to 0&ndash;&gt;-->
-
-<!--                <TextView-->
-<!--                    android:layout_width="fill_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:text="0"-->
-<!--                    android:id="@+id/tvLucroFinal"-->
-<!--                    android:textAlignment="textEnd"-->
-<!--                    android:textSize="18sp"-->
-<!--                    android:textColor="@color/color_one"-->
-<!--                    android:textStyle="bold"-->
-<!--                    android:fontFamily="sans-serif-light"-->
-<!--                    android:layout_alignParentRight="true"/>-->
-
-<!--            </RelativeLayout>-->
-<!--            <View-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="1dp"-->
-<!--                android:background="@color/color_two"-->
-<!--                android:layout_marginLeft="20dp"-->
-<!--                android:layout_marginRight="20dp" />-->
-
-<!--            <RelativeLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginRight="25dp"-->
-<!--                android:layout_marginLeft="25dp"-->
-<!--                android:layout_marginTop="10dp"-->
-<!--                android:layout_marginBottom="10dp">-->
-
-<!--                <TextView-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:fontFamily="sans-serif-light"-->
-<!--                    android:text="Pneus"-->
-<!--                    android:textSize="18sp"/>-->
-
-<!--                &lt;!&ndash;Text view to display the percentage &ndash;&gt;-->
-<!--                &lt;!&ndash; of programming language used. &ndash;&gt;-->
-<!--                &lt;!&ndash; For now default set to 0&ndash;&gt;-->
-<!--                <TextView-->
-<!--                    android:layout_width="fill_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:text="0"-->
-<!--                    android:id="@+id/tvPneus"-->
-<!--                    android:textAlignment="textEnd"-->
-<!--                    android:textSize="18sp"-->
-<!--                    android:textColor="@color/color_one"-->
-<!--                    android:textStyle="bold"-->
-<!--                    android:fontFamily="sans-serif-light"-->
-<!--                    android:layout_alignParentRight="true"/>-->
-
-<!--            </RelativeLayout>-->
-<!--            <View-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="1dp"-->
-<!--                android:background="@color/color_two"-->
-<!--                android:layout_marginLeft="20dp"-->
-<!--                android:layout_marginRight="20dp" />-->
-
-<!--            <RelativeLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginRight="25dp"-->
-<!--                android:layout_marginLeft="25dp"-->
-<!--                android:layout_marginTop="10dp"-->
-<!--                android:layout_marginBottom="10dp">-->
-
-<!--                <TextView-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:fontFamily="sans-serif-light"-->
-<!--                    android:text="Serviço Elétrico"-->
-<!--                    android:textSize="18sp"/>-->
-
-<!--                &lt;!&ndash;Text view to display the percentage &ndash;&gt;-->
-<!--                &lt;!&ndash; of programming language used. &ndash;&gt;-->
-<!--                &lt;!&ndash; For now default set to 0&ndash;&gt;-->
-<!--                <TextView-->
-<!--                    android:layout_width="fill_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:text="0"-->
-<!--                    android:id="@+id/tvServicoEletrico"-->
-<!--                    android:textAlignment="textEnd"-->
-<!--                    android:textSize="18sp"-->
-<!--                    android:textColor="@color/color_one"-->
-<!--                    android:textStyle="bold"-->
-<!--                    android:fontFamily="sans-serif-light"-->
-<!--                    android:layout_alignParentRight="true"/>-->
-
-<!--            </RelativeLayout>-->
-
-<!--        </LinearLayout>-->
-
-<!--    </androidx.cardview.widget.CardView>-->
-
-<!--    <Button-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="550dp"-->
-<!--        android:layout_marginLeft="100dp"-->
-<!--        android:backgroundTint="#0A22F4"-->
-<!--        android:text="INSERIR NOVOS DADOS"/>-->
-
-</RelativeLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
