--- a/app/src/main/res/layout/fragment_freight.xml
+++ b/app/src/main/res/layout/fragment_freight.xml
@@ -54,6 +54,7 @@
                 android:orientation="vertical">
 
                 <ListView
+                    android:id="@+id/lvFrete"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"/>
 
