--- a/app/src/main/res/layout/fragment_freight.xml
+++ b/app/src/main/res/layout/fragment_freight.xml
@@ -28,11 +28,13 @@
 
         <EditText
             android:id="@+id/edFreight"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:autofillHints="name"
             android:hint="@string/escreva"
             android:inputType="text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:minHeight="48dp"
+            android:textColorHint="#757575" />
 
         <Button
             android:id="@+id/btCadastroFrete"
@@ -43,24 +45,24 @@
             android:textColor="@color/white"
             android:text="@string/inserir" />
 
-        <ScrollView
+<!--        <ScrollView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content">-->
+
+<!--            <LinearLayout-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:orientation="vertical">-->
+
+        <ListView
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:id="@+id/lvFrete"/>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+<!--            </LinearLayout>-->
 
-                <ListView
-                    android:id="@+id/lvFrete"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"/>
-
-            </LinearLayout>
-
-        </ScrollView>
+<!--        </ScrollView>-->
 
         <LinearLayout
             android:layout_width="match_parent"
