--- a/app/src/main/res/layout/fragment_veihcle.xml
+++ b/app/src/main/res/layout/fragment_veihcle.xml
@@ -45,23 +45,25 @@
         android:textColor="@color/white"
         android:text="@string/inserir" />
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
+<!--        <ScrollView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="0dp"-->
+<!--            android:layout_weight="1">-->
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+<!--            <LinearLayout-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="vertical">-->
 
                 <ListView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent" />
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:id="@+id/lvVeiculo"/>
 
-            </LinearLayout>
+<!--            </LinearLayout>-->
 
-        </ScrollView>
+<!--        </ScrollView>-->
 
         <LinearLayout
         android:layout_width="match_parent"
