--- a/app/src/main/res/layout/fragment_debit.xml
+++ b/app/src/main/res/layout/fragment_debit.xml
@@ -84,23 +84,11 @@
             android:layout_gravity="center"
             android:text="@string/inserir" />
 
-        <ScrollView
-            android:layout_width="match_parent"
+        <ListView
+            android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_weight="1">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <ListView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent" />
-
-            </LinearLayout>
-
-        </ScrollView>
+            android:layout_weight="1"
+            android:id="@+id/lvDebito"/>
 
         <LinearLayout
             android:layout_width="match_parent"
