--- a/app/src/main/res/layout/fragment_debit.xml
+++ b/app/src/main/res/layout/fragment_debit.xml
@@ -96,6 +96,7 @@
             android:padding="10dp">
 
             <Button
+                android:id="@+id/btExcluirDebito"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
