--- a/app/src/main/res/layout/fragment_expense.xml
+++ b/app/src/main/res/layout/fragment_expense.xml
@@ -71,6 +71,7 @@
             android:padding="10dp">
 
             <Button
+                android:id="@+id/btDesativarGasto"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
