--- a/app/src/main/res/layout/fragment_freight.xml
+++ b/app/src/main/res/layout/fragment_freight.xml
@@ -70,6 +70,7 @@
             android:padding="10dp">
 
             <Button
+                android:id="@+id/btDesativarFrete"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
